# netlook

./: LEARN.md  README.md  pyproject.toml
netlook/: __main__.py  dump.py
netlook/core/: __init__.py  actions.py  discovery.py  models.py  scanner.py  services.py
netlook/ui/: __init__.py  base.py  dpg.py  textual.py
tests/: conftest.py  doubles.py  factories.py  test_actions.py  test_discovery.py  test_dump.py  test_models.py  test_scanner.py  test_services.py  test_ui_base.py  test_ui_textual.py
