[project]
name = "netlook"
version = "0.1.0"
description = "A local network service browser"
dependencies = [
    "dearpygui>=1.11.0",
    "zeroconf>=0.14.0",
    "wsdiscovery>=2.1.2",
    "httpx>=0.27.0",
    "textual>=0.60.0",
    "psutil>=5.9.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[project.scripts]
netlook = "netlook.ui.dpg:main"
netlooktui = "netlook.ui.textual:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "factory-boy>=3.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["netlook"]
